<resources>
    <string name="app_name">Blazares Orpheus</string>
    <string name="brand_primary">BLAZARES</string>
    <string name="brand_secondary">ORPHEUS</string>
    <string name="splash_figure_description">Orpheus playing a lyre</string>
    <string name="calibration_error_positive_hz">Calibration must be greater than 0 Hz.</string>
    <string name="capture_error_microphone_unavailable">The microphone could not be started. Check that it is not being used by another app, then try again.</string>
    <string name="microphone_permission_title">Microphone access is required</string>
    <string name="microphone_permission_body">Allow microphone access to activate the tuner and waveform panels. Audio is processed locally on this device.</string>
    <string name="microphone_permission_action">Allow microphone access</string>
    <string name="microphone_permission_open_settings">Open app settings</string>
    <string name="version_label">Version %1$s</string>
</resources>
